--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-input{
-    border: 1px solid black;
+*{
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
 }
