adding in icons

--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,14 @@ img{
     height: 200;
 }
 body {
-    background-image: url('./Images/background.png');
+    
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    color: white;
+    
+    
+}
+.weather-icons{
+    width: 64px;
+    height: 64px;
 }
